put label on docket_number

--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -290,7 +290,7 @@ subquestion: |
 
   ${ collapse_template(where_case_number) }
 fields:
-  - no label: docket_number
+  - Case number: docket_number
     maxlength: 25
 ---
 template: where_case_number
