--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/review.yml
@@ -207,7 +207,7 @@ review:
       % if is_additional_amount_new:
       Complete the following sentence. 'The reason for the other expenses is as follows:': ${ showifdef('additional_amount_reason') }
 
-      How much per month are you asking the court to order for the other expenses?: ${ showifdef('additional_amount_new') }
+      How much per month are you asking the court to order for the other expenses?: ${ currency(showifdef('additional_amount_new')) }
       % endif
   - Edit: |-
       asking_for_payer_benefits_credit
@@ -221,7 +221,7 @@ review:
       Are you asking for the court to give ${ who_pays_new } a credit?: ${ word(yesno(asking_for_payer_benefits_credit)) }
 
       % if asking_for_payer_benefits_credit:
-      How much is the monthly dependent benefit that the ${ "children get" if len(children) > 1 else "child gets" } from the government insurance program based on your work record?: ${ showifdef('child_benefit_amount') }
+      How much is the monthly dependent benefit that the ${ "children get" if len(children) > 1 else "child gets" } from the government insurance program based on your work record?: ${ currency(showifdef('child_benefit_amount')) }
       % endif
   - Edit: |-
       esign
