--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -440,7 +440,7 @@ fields:
     show if:
       variable: x.no_phone_number
       is: False
-  - I do not know ${x}'s phone number: x.no_phone_number
+  - ${ x } does not have a phone number: x.no_phone_number
     required: False
     datatype: yesno
 ---
@@ -448,8 +448,10 @@ id: your contact information
 question: |
   What is your phone number?
 subquestion: |
-  ${ collapse_template(why_contact_info_needed_template) }
-fields:  
+  The court must be able to call you. So you have to give them a way to do this.
+
+  ${ collapse_template(what_if_no_number_template) }
+fields:
   - Phone number: users[0].phone_number
     show if:
       variable: users[0].no_phone_number
@@ -457,12 +459,13 @@ fields:
   - I do not have a contact number: users[0].no_phone_number
     required: False
     datatype: yesno
+  - note: |
+      ${ what_if_no_number_template.content }
+    show if: users[0].no_phone_number
 ---
-template: why_contact_info_needed_template
-subject: Why do I need to give my phone number?
+template: what_if_no_number_template
+subject: What if I don't have a phone_number?
 content: |
-  The court must be able to call you. So you have to give them a way to do this.
-
   If you do not have a phone number, you can give someone else's number
   as long as they can pass on messages to you. You should tell this person
   that you are using their number on your court forms.
@@ -470,11 +473,7 @@ content: |
 generic object: ALIndividual
 code: |
   if x.no_phone_number:
-    x.phone_number = ""
----
-code: |
-  if users[0].no_phone_number:
-    users[0].phone_number = "Does not have phone"
+    x.phone_number = "Does not have phone"
 ---
 id: how many children
 question: |
