Improve review screen
* Adds ability to change court (fix #23).
* Fixes some issues with changing party type (plaintiff vs defendant)
* Shorten wording and display of other review screen items
* Also fix mis-labeled other_party option in the question block (not review screen)

--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -70,7 +70,6 @@ objects:
 generic object: ALIndividual
 code: |
   x.name.first
-  # TODO(#6): do we need to handle international addresses?
   x.address.address
   x.phone_number
   x.complete = True
@@ -640,7 +639,7 @@ fields:
     datatype: radio
     choices:
       - ${ users[0] } (you): user
-      - ${ defendants[0] }: other_party
+      - ${ other_parties[0] }: other_party
 ---
 depends on:
   - who_pays_new
