Fixed typos in minimum children number

--- a/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
+++ b/docassemble/MLHMotionRegardingChildSupport/data/questions/motion_regarding_child_support.yml
@@ -424,10 +424,10 @@ question: |
 fields:
   - no label: children.target_number
     datatype: integer
-    min: 0
+    min: 1
     validation messages:
       min: |
-        You need to have at least one minor child that you are request support for.
+        You need to have at least one minor child that you are requesting support for.
 ---
 id: minor birthdate question
 question: |
